update: added hover effect on best seller image and fix flex wrap on best seller contents

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -146,6 +146,17 @@ select {
 	width: 100%;
 	justify-content: space-between;
 	border-radius: 15px;
+	flex-wrap: wrap;
+}
+
+.best-seller-container h4 {
+	font-size: 13px;
+}
+
+.bestseller-list {
+	display: flex;
+	flex-direction: column;
+	flex: 1 20%;
 }
 
 h2 {
@@ -163,7 +174,11 @@ h2 {
 	height: 198px;
 	width: 128px;
 	border-radius: 5px;
-	margin: 15px;
+	/* margin: 15px; */
+}
+
+.best-seller-img:hover {
+	box-shadow: 0 0 10px gray;
 }
 
 .search-result-container {
